# cogwebvm

./: .gitattributes  BUILD_INSTRUCTIONS.md  CLAUDE.md  CMakeLists.txt  README.md  copilot-memories-1.md  guix.scm  ideas.md  index.html  launch_playground.sh  occ-build-webvm.sh  opencog-test-results.md  opencog-webvm-installation-summary.md  package.json  pnpm-lock.yaml  start-opencog-webvm.sh  test_opencog_guile.scm  test_opencog_python.py  todo.md  vcpkg-configuration.json  vcpkg.json  vite.config.ts  vitest.config.ts
.github/agents/: cogwebvm.agent.md  neurocog.md
.github/workflows/: ci.yml  debian-packages.yml  debian-packaging.yml  deploy-pages.yml  occ-build.yml  release.yml
assets/: addon-web-links-BjXFD2Pv.js  index-BhrQU2s-.js  index-C0Pn0G13.js  index-DEgYTeuw.css
atomspace-explorer/: npm-shrinkwrap.json  package-lock.json  package.json
atomspace-typescript/: package-lock.json
atomspace/debian/: control  libatomspace-dev.install  libatomspace.install
azure-cowork/: README.md  Setup-CoworkVM.ps1  azuredeploy-entra.json  azuredeploy.json  deploy-entra.sh  deploy.sh
azure-cowork/scripts/: rzoai-cloudflare-dns.sh  rzoai-entra-join.ps1  (+1 more)
client/: index.html
cogself/: neurocog_playground.py
cogutil/lib/: CMakeLists.txt
drizzle/: 0001_flashy_goblin_queen.sql  schema.ts
e2e/: auth.spec.ts
learn/: CMakeLists.txt
opencog-debian/: build-all-enhanced.sh  build-all-packages.sh
server/: fileDb.ts  fileStorage.test.ts  routers.ts
shared/: aion-engine.ts  aion-types.ts  atomspace.test.ts  atomspace.ts  repl.test.ts  repl.ts
test/: test_all.cpp
(+39 files in other folders)
